--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,3 +21,21 @@ a {
   text-decoration: none;
 }
 
+/* BODY */
+
+body {
+  height: 100vh;
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  align-items: stretch;
+  font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+/* CONTAINER  */
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
