--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,3 +39,59 @@ body {
   margin: 0 auto;
 }
 
+/* HEADER */
+
+.header {
+  padding: 1em 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.right-header {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+.right-header li i {
+  font-size: 1.5em;
+}
+
+/* DROPDOWN */
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-button {
+  cursor: pointer;
+  display: flex;
+  flex-flow: column wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: .4em;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* BURGER */
+
+.burger {
+  width: 2em;
+  height: .2em;
+  background-color: #333;
+  border-radius: 1em;
+}
