--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,6 +11,7 @@ html {
 
 ul {
   padding: 0;
+  margin: 0;
 }
 
 li {
@@ -50,13 +51,22 @@ body {
 
 .right-header {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   gap: 1em;
 }
 
 .right-header li i {
   font-size: 1.5em;
 }
+
+#light {
+  display: none;
+}
+
+#light, #dark {
+  cursor: pointer;
+}
+
 
 /* DROPDOWN */
 
@@ -76,11 +86,21 @@ body {
 
 .dropdown-content {
   display: none;
+  padding: 1em 1.5em;
   position: absolute;
+  border-radius: 5px;
   background-color: #f9f9f9;
-  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  right: -2em;
+}
+
+.dropdown-content ul {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 1em;
 }
 
 .dropdown:hover .dropdown-content {
