--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,10 @@
+/* VARIABLES */
+:root {
+  --text: #FFFFFF;
+  --bg: #161819;
+  --primary: #8EF2FF;
+  --secondry: #E36E40;
+}
 /* RESET */
 
 html {
@@ -30,7 +37,9 @@ body {
   flex-flow: column;
   justify-content: space-between;
   align-items: stretch;
-  font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background: var(--bg);
+  font-family:  'RobotoSlab' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  color: var(--primary);
 }
 
 /* CONTAINER  */
@@ -52,11 +61,18 @@ body {
 .right-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   gap: 1em;
 }
 
 .right-header li i {
   font-size: 1.5em;
+  color: var(--text);
+}
+
+.odin {
+  cursor: pointer;
+  width: 1.3em;
 }
 
 #light {
@@ -70,32 +86,26 @@ body {
 
 /* DROPDOWN */
 
-.dropdown {
-  position: relative;
-  display: inline-block;
+.hamburger-inner,
+.hamburger-inner.is-active,
+.hamburger-inner:after,
+.hamburger-inner::before {
+  background-color: var(--text) !important;
 }
 
-.dropdown-button {
-  cursor: pointer;
-  display: flex;
-  flex-flow: column wrap;
-  align-items: center;
-  justify-content: space-between;
-  gap: .4em;
-}
-
-.dropdown-content {
+.hamburger-content {
   display: none;
   padding: 1em 1.5em;
   position: absolute;
   border-radius: 5px;
-  background-color: #f9f9f9;
+  background-color: #333;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  right: -2em;
+  right: 1em;
+  top: 6em;
 }
 
-.dropdown-content ul {
+.hamburger-content ul {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
@@ -103,15 +113,36 @@ body {
   gap: 1em;
 }
 
-.dropdown:hover .dropdown-content {
+.hamburger-content button {
+  border: none;
+  cursor: pointer;
+  text-transform: capitalize;
+  background-image: linear-gradient(to right, #603813 0%, #b29f94  51%, #603813  100%);
+  margin: 10px;
+  padding: 15px 45px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;            
+  box-shadow: 0 0 20px #eee;
+  border-radius: 10px;
   display: block;
 }
 
-/* BURGER */
+.hamburger-content button:hover {
+  background-position: right center; /* change the direction of the change here */
+  color: #fff;
+  text-decoration: none;
+}
 
-.burger {
-  width: 2em;
-  height: .2em;
-  background-color: #333;
-  border-radius: 1em;
+
+.active {
+  display: block;
+}
+
+/* MAIN */
+
+main {
+  height: 100%;
 }
