--- a/src/css/style.css
+++ b/src/css/style.css
@@ -58,6 +58,25 @@ body {
   align-items: center;
 }
 
+.left-header h2::after, .left-header h2::before {
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: var(--secondry);
+  display: block;
+  transition: 0.5s;
+}
+
+.left-header h2:hover::after, .left-header h2:hover::before {
+  width: 100%;
+}
+
+.left-header h2 p {
+  font-family:  'NeutonItalic' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  display: inline;
+  color: var(--secondry);
+}
+
 .right-header {
   display: flex;
   justify-content: space-between;
