--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,6 +27,7 @@ li {
 
 a {
   text-decoration: none;
+  color: none;
 }
 
 /* BODY */
@@ -58,7 +59,11 @@ body {
   align-items: center;
 }
 
-.left-header h2::after, .left-header h2::before {
+.left-header a h2 {
+  color: var(--primary);
+}
+
+.left-header a h2::before {
   content: '';
   width: 0%;
   height: 2px;
@@ -67,12 +72,12 @@ body {
   transition: 0.5s;
 }
 
-.left-header h2:hover::after, .left-header h2:hover::before {
+.left-header a h2:hover::before {
   width: 100%;
 }
 
-.left-header h2 p {
-  font-family:  'NeutonItalic' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+.left-header a h2 p {
+  font-family:  'Neuton' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   display: inline;
   color: var(--secondry);
 }
@@ -114,7 +119,7 @@ body {
 
 .hamburger-content {
   display: none;
-  padding: 1em 1.5em;
+  padding: 1em;
   position: absolute;
   border-radius: 5px;
   background-color: #333;
@@ -129,7 +134,6 @@ body {
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: center;
-  gap: 1em;
 }
 
 .hamburger-content button {
@@ -137,14 +141,12 @@ body {
   cursor: pointer;
   text-transform: capitalize;
   background-image: linear-gradient(to right, #603813 0%, #b29f94  51%, #603813  100%);
-  margin: 10px;
-  padding: 15px 45px;
+  padding: 1em 1.5em;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
   color: white;            
-  box-shadow: 0 0 20px #eee;
   border-radius: 10px;
   display: block;
 }
@@ -162,6 +164,29 @@ body {
 
 /* MAIN */
 
-main {
-  height: 100%;
+.intro {
+  display: flex;
+  text-align: center;
+  flex-flow: column wrap;
+  align-items: center;
+}
+
+.intro h1 {
+  color: var(--secondry);
+}
+
+.intro q {
+  color: var(--text);
+  font-family:  'Neuton Italic' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  margin-bottom: 1em;
+}
+
+.intro button {
+  padding: 1em 2em;
+  background-color: var(--bg);
+  border: 2px solid var(--secondry);
+  color: var(--text);
+  font-family:  'RobotoSlab' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-weight: 700;
+  cursor: pointer;
 }
