--- a/src/css/style.css
+++ b/src/css/style.css
@@ -125,7 +125,7 @@ body {
   background-color: #333;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  right: 1em;
+  right: 6vw;
   top: 6em;
 }
 
@@ -165,6 +165,8 @@ body {
 /* MAIN */
 
 .intro {
+  width: 80%;
+  margin: 0 auto;
   display: flex;
   text-align: center;
   flex-flow: column wrap;
