--- a/src/css/style.css
+++ b/src/css/style.css
@@ -137,6 +137,7 @@ body {
 }
 
 .hamburger-content .options {
+  margin-top: 1em;
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-around;
@@ -145,6 +146,7 @@ body {
 }
 
 .hamburger-content .option {
+  font-weight: 400;
   cursor: pointer;
   color: var(--text);
   background: var(--bg);
@@ -186,4 +188,19 @@ body {
   font-family:  'RobotoSlab' ,system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: 700;
   cursor: pointer;
+}
+
+/* GRID */
+
+.grid {
+  margin: 0 auto;
+  width: 80%;
+  height: 45vh;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.pixel {
+  flex: auto;
+  background-color: var(--text);
 }
