--- a/src/css/style.css
+++ b/src/css/style.css
@@ -195,7 +195,7 @@ body {
 .grid {
   margin: 0 auto;
   width: 80%;
-  height: 50vh;
+  height: 55vh;
   display: none;
   flex-flow: row wrap;
 }
@@ -203,4 +203,7 @@ body {
 .pixel {
   flex: auto;
   background-color: var(--text);
+  outline-style: solid;
+  outline-color: plum;
+  outline-width: 1px;
 }
