--- a/src/css/style.css
+++ b/src/css/style.css
@@ -96,7 +96,7 @@ body {
 
 .odin {
   cursor: pointer;
-  width: 1.3em;
+  width: 2em;
 }
 
 #light {
@@ -190,16 +190,53 @@ body {
   cursor: pointer;
 }
 
+/* TOY */
+
+.toy {
+  margin-top: 3em;
+  display: none;
+  border: solid 2px var(--secondry);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
 /* GRID */
 
 .grid {
   margin: 0 auto;
   height: 55vh;
-  display: none;
+  display: flex;
   flex-flow: row wrap;
+  border-bottom: solid 2px var(--secondry);
 }
 
 .pixel {
   flex: auto;
+  background-color: var(--text);
+}
+
+/* ANALOG */
+
+.analog-container {
+  padding: .5em 1em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.analog {
+  width: 6rem;
+  height: 6rem;
+  border-radius: 50% 50%;
+  background-color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.circle {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 50% 50%;
   background-color: var(--text);
 }
